--- a/deploy-service.yml
+++ b/deploy-service.yml
@@ -27,7 +27,7 @@ metadata:
   labels:
     run: springapp
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 8080
     targetPort: 8080
