--- a/deploy-service.yml
+++ b/deploy-service.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: springapp
-        image: devopseasy/spring-petclinic-pro:1
+        image: devopseasy/spring-petclinic-pro:1.0.0-1
         ports:
           - containerPort: 8080
         imagePullPolicy: IfNotPresent
